package com.sesac.practice.day06

class Patent(
    name: String,
) : IntangibleAsset(name)
