package com.survivalcoding.kotlinstudy.`06_abstract_class_interface`

// 연습문제 3. 인터페이스 Thing
interface Thing {
    var weight: Double  // 기본적으로 getter, setter 포함
}